# codeowners-zed

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  extension.toml
.github/: CODEOWNERS
crates/codeowners-lsp/: Cargo.toml
crates/codeowners-lsp/examples/: test_locate.rs
crates/codeowners-lsp/src/: main.rs
src/: lib.rs
