[package]
name = "codeowners-lsp"
version = "0.1.0"
edition = "2021"
description = "Language server for CODEOWNERS"
license = "MIT"

[[bin]]
name = "codeowners-lsp"
path = "src/main.rs"

[dependencies]
codeowners = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"

[dev-dependencies]
codeowners = "0.1"
